Update messages_de.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -547,7 +547,7 @@ mod.detail.size = Größe
 mod.detail.installations = Installationen
 mod.detail.version = Version
 mod.detail.dependencies = Abhängigkeiten
-map.noDescriptionAvailable = Der Autor hat keine Beschreibung erfasst.
+map.noDescriptionAvailable = Der Autor hat keine Beschreibung verfasst.
 updater.taskTitle = Lade Spieldateien herunter
 updater.downloadingFile = Lade {0} herunter
 updater.patchingFile = Patche {0}
@@ -666,7 +666,7 @@ map.hidden = Versteckt
 map.hide = Verstecken
 map.unrank = Als ungewertet markieren
 map.couldNotHide = Konnte Karte nicht verstecken.
-map.couldNotUnrank = Konnte Map nicht als ungewertet markieren.
+map.couldNotUnrank = Konnte Karte nicht als ungewertet markieren.
 modVersion.ranked = Gewertet
 game.missionName = Mission
 settings.appearance.backgoundImage = Hintergrundbild
@@ -835,10 +835,11 @@ mod.manager.uiMods = UI
 mod.manager.simMods = SIM
 mod.manager.deselectAll = Alle Mods deaktivieren
 mod.manager.reload = Neu laden
-mod.manager.simModsTooltip = SIM mods beeinflussen das Spiel für alle Spieler.
-mod.manager.uiModsTooltip = UI mods beeinflussen nur dein Spielerlebnis.
+mod.manager.simModsTooltip = SIM Mods beeinflussen das Spiel für alle Spieler.
+mod.manager.uiModsTooltip = UI Mods beeinflussen nur dein Spielerlebnis.
 modVault.modManager = Verwalte aktivierte mods
 modVault.manageMods = Verwalte aktivierte mods
+theme.needsRestart.message = Das Wechseln zu Themen ''{0}'' bedarf einem Neustart.
 theme.needsRestart.quit = Beenden
 vault.loading = Lade...
 vault.displayQuery = Zeige Abfrage
@@ -852,7 +853,7 @@ game.generateMap = neue Karte generieren
 game.generateMap.recreate = Generiere Karte erneut basierend auf folgendem Namen\:
 game.generateMap.generateNew = Generiere eine neue Karte mit folgenden Einstellungen\:
 game.generateMap.dialog = Kartengeneratoroptionen
-game.generateMap.nameCaution = Gebe den Namen einer Karte ein die du erneut generieren willst. Kartenname muss dem Muster neroxis_map_generator_(version)_(seed)_(options) entsprechen.
+game.generateMap.nameCaution = Gebe den Namen einer Karte ein die du erneut generieren willst. Kartenname muss dem Muster neroxis_map_generator_(version)_(seed)_(optionen) entsprechen.
 game.generateMap.generatedName = Kartenname
 game.generateMap.waterSlider = Wasser
 game.generateMap.plateauSlider = Plateaus
@@ -903,6 +904,7 @@ game.reasonNotValid.desync = Zu viele Desyncs
 game.reasonNotValid.wrongCondition = Falsche Siegbedingung
 game.reasonNotValid.fogOfWar = Kein Nebel des Krieges
 game.reasonNotValid.cheats = Cheats erlaubt
+game.reasonNotValid.prebuilt = Vorgebaute Einheiten
 game.reasonNotValid.unitRestriction = Einheiteinschränkungen
 game.reasonNotValid.unrankedMap = Ungewertete Karte
 game.reasonNotValid.short = Spiel zu kurz
@@ -916,7 +918,10 @@ game.reasonNotValid.unknown = unbekanntes Ergebnis
 game.reasonNotValid.teamsUnlocked = Teams entsperrt
 game.reasonNotValid.multipleTeams = mehr als 2 Teams
 game.reasonNotValid.ai = KI Spiel
+game.reasonNotValid.civiliansRevealed = Zivilisten aufgedeckt
 game.reasonNotValid.spawn = Keine festen Startpositionen
+game.reasonNotValid.other = Andere
+game.valid = Spiel gewertet
 exitWarning.title = Warnung
 exitWarning.message = Forged Alliance läuft noch, bist du sicher dass du den Client schließen willst?
 chat.userContext.broadcast = Broadcastnachricht...
@@ -963,7 +968,7 @@ game.onlyRanked = nur gewertete Spiele
 game.map.author = Kartenautor
 vault.savedQueries = Favoriten
 vault.saveQuery = Abfrage speichern
-map.onlyRanked = nur gewertete Spiele
+map.onlyRanked = nur gewertete Karten
 map.widthPixels = Breite (in px)
 map.heightPixels = Höhe (in px)
 query.moreFilters = Mehr Filter
@@ -973,7 +978,7 @@ query.rangeFilter = {0}\: bis {1}
 query.dateRangeFilter = {0}\: von {1} bis {2}
 query.afterDate = Nach
 query.beforeDate = Vor
-mod.onlyRanked = nur gewertete Spiele
+mod.onlyRanked = nur gewertete Mods
 teammatchmaking.leaveParty = Gruppe verlassen
 teammatchmaking.invitePlayer = Spieler einladen
 teammatchmaking.invite = Einladen
