Update messages_pl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -686,7 +686,9 @@ settings.appearance.backgoundImage = Obraz w tle
 settings.appearance.useDefaultImage = Użyj domyślnego obrazu
 settings.appearance.chooseImage = Wybierz obraz
 settings.general.theme.useNoImage = brak obrazu
+query.notContains = nie zawiera
 coop.unknownMission = Nieznana misja
+game.couldNotJoin = Nie można dołączyć się do gry z ID ''{0}''.
 discord.disallowJoins = Nie zezwalaj graczom dołączać za pośrednictwem Discord
 # Fuzzy
 replay.couldNotOpen = Powtórka o ID "{0}" nie mogła zostać otwarta
@@ -713,6 +715,7 @@ login.ircServerHost = Host serwera IRC
 login.withEmailWarning = Zaloguj się przy użyciu nazwy użytkownika, a nie adresu email.
 vault.next = Następny
 vault.previous = Poprzedni
+vault.currentPage = Strona\: {0,number,#}
 settings.chat.addAutoJoinChannel = Dodaj kanał
 settings.chat.removeAutoJoinChannel = Usuń
 settings.chat.autoJoinChannelList = skonfiguruj kanały aby dołączyć
@@ -774,6 +777,7 @@ tiles.comparator.averageRatingDescending = Sortuj na bazie Średniego Rankingu M
 tiles.comparator.averageRatingAscending = Sortuj na bazie Średniego Rankingu Rosnąco
 replay.dateTooltip = Data rozpoczęcia
 replay.timeTooltip = Czas rozpoczęcia
+replay.durationTooltip = Czas rzeczywisty
 replay.replayDurationTooltip = Długość powtórki
 replay.playerCountTooltip = Gracze
 replay.ratingTooltip = Średni ranking
@@ -782,11 +786,19 @@ mod.uploader.login = Wstawiający
 mapVault.upload.openValidation = Weryfikacja metadanych
 replay.ignoreMapNotFound = Ignoruj i rozpocznij powtórkę
 replay.abortAfterMapNotFound = Przerwij i pokaż więcej informacji
+replay.mapDownloadFailed = Pobranie mapy do tej powtórki się nie udało
+replay.mapDownloadFailed.wannaContinue = Nie mogliśmy znaleźć mapy z pliku powtórki, mimo to gra może i tak ją znaleźć. Uznaj to za ostrzeżenie, że ten plik powtórki może być uszkodzony.
 map.unknown = nieznana
+settings.account.goWebsiteButton = Odwiedź stronę FAForever
+map.versionId = ID wersji mapy
 vault.replays.ownReplays = Twoje powtórki
 modVault.details.uploader = Wstawiony przez\: {0}
 modVault.details.author = Autorstwa\: {0}
 gameSelect.select.invalidPath = Niewłaściwa ścieżka
+gamePath.select.noneChosen = Nie wybrałeś folderu, w którym znajduje się gra\!
+gamePath.select.noValidExe = Podany folder nie zawiera prawidłowego pliku Supreme Commander.exe i dlatego nie jest on prawidłową lokalizacją instalacji Forged Alliance.
+gamePath.select.vanillaGameSelected = Podany folder zawiera zainstalowaną grę bez dodatku Forged Alliance, musisz wskazać folder z Supreme Commander Forged Alliance.
+gamePath.select.fafDataSelected = Podany folder zawiera pliki Forged Alliance Forever, musisz wskazać folder, w którym zainstalowana jest gra.
 gamePath.select.error = Coś poszło nie tak podczas wyboru ścieżki
 game.create.defaultGameTypeMarker = (domyślne)
 settings.general.startTab = Zakładka startowa
@@ -812,6 +824,7 @@ game.generate.rampSlider = Stoki
 game.generate.random = Losowe
 game.generate.none = Brak
 game.generate.lots = Dużo
+mapGenerator.tooOldVersion = Ta wersja generatora map nie jest już wspierana
 mod.manager.uiMods = UI
 mod.manager.simMods = SIM
 mod.manager.deselectAll = Odznacz wszystkie mody
@@ -822,14 +835,17 @@ modVault.modManager = Zarządzaj aktywnymi modami
 modVault.manageMods = Zarządzaj aktywnymi modami
 theme.needsRestart.quit = Koniec
 vault.loading = Wczytywanie...
+vault.displayQuery = Wyświetl rezultat wyszukiwania
 vault.searchError = podczas wyszukiwania wystąpił błąd
 vault.upload = Wstaw...
 replay.team = Drużyna {0}
 replay.noTeam = Brak Drużyn
 search.perPage = Elementów na Stronę
 game.generateMap = Utwórz nową mapę
+game.generateMap.recreate = Wygeneruj ponownie mapę używając następującej nazwy\:
 game.generateMap.generateNew = Utwórz nową mapę przy użyciu następujących opcji
 game.generateMap.dialog = Opcje Generatora Mapy
+game.generateMap.nameCaution = Wprowadź nazwę wygenerowanej mapy, którą chcesz ponownie wygenerować. Nazwa mapy musi być w formacie neroxis_map_generator_(version)_(seed)_(options)
 game.generateMap.generatedName = Nazwa Mapy
 game.generateMap.waterSlider = Woda
 game.generateMap.plateauSlider = Płaskowyże
@@ -870,6 +886,9 @@ game.reasonNotValid.expansion = Ekspansja Wyłączona
 game.reasonNotValid.other = Inne
 exitWarning.title = Ostrzeżenie
 exitWarning.message = Forged Alliance jest wciąż uruchomiony, czy jesteś pewien, że chcesz wyłączyć klienta?
+chat.userContext.broadcast = Nadaj wiadomość...
+corruptedModsError.notification = Nieoczekiwany błąd podczas ładowania modyfikacji\: {0}.
+chat.filter.countryPrompt = Kod kraju
 game.generateMap.casual = Towarzyska
 game.generateMap.tournament = Turniej
 settings.date.system = Automatyczna
@@ -885,11 +904,12 @@ settings.fa.allowReplayWhileInGame = Pozwalaj na oglądanie powtórek będąc w 
 settings.fa.allowReplayWhileInGame.description = Jeśli aktywujesz tą eksperymentalną funkcję będziesz mógł oglądać powtórki będąc w grze. Poza zaznaczeniem tej opcji będziesz musiał aktywować to w pliku game.prefs albo kliknij przycisk poniżej i zrobimy to za Ciebie. Jeśli przycisk jest nieaktywny to znaczy, że game.prefs już jest zaktualizowany. Jeśli będziesz włączał gry, których wersje nie pasują to mogą występować błędy.
 settings.fa.patchGamePrefsFailed = Nie udało się zaktualizować pliku game.prefs
 settings.fa.allowReplayWhileInGame.experimental = eksperymentalne
-error.game.filesNotAccessible = Niektóre pliki z zainstalowanej gry nie mogły zostać skopiowane do FAF, ale jeśli ostatnio ich nie modyfikowałeś w zainstalowanej wersji nie masz się czym przejmować. I tak uruchamiamy grę dla Ciebie.
+error.game.filesNotAccessible = Niektóre pliki z zainstalowanej gry nie mogły zostać skopiowane do FAF, ale jeśli ostatnio ich nie modyfikowałeś w zainstalowanej wersji, nie masz się czym przejmować. I tak uruchamiamy grę dla Ciebie.
 game.gameRunning = Forged Alliance już działa, nie możesz zacząć nowej gry dopóki nie zakończysz poprzedniej.
-replay.gameRunning = Nie możesz zobaczyć powtórki, bo Forged Alliance już działa. Jeśli chcesz możesz włączyć eksperymentalną funkcję do oglądania powtórek w lobby w ustawieniach.
+replay.gameRunning = Nie możesz zobaczyć powtórki, bo Forged Alliance już działa. Jeśli chcesz, możesz włączyć eksperymentalną funkcję do oglądania powtórek ustawieniach lobby.
 chat.userColor = kolor
 review.currentVersion = aktualna wersja
+filter = Filtr wyszukiwania
 main.mods = Mody
 game.date = Data
 game.onlyRanked = Tylko rankingowe
@@ -900,3 +920,9 @@ map.widthPixels = szerokość (w pikselach)
 map.heightPixels = wysokość (w pikselach)
 query.moreFilters = więcej flitrów
 mod.onlyRanked = Tylko rankingowe
+chat.groupChat.playerDisconnect = {0} rozłączył się
+chat.groupChat.playerConnect = {0} podłączył się
+copyError = Błąd kopiowania
+findHelp = Jeśli błąd nadal występuje, użyj przycisku Pomoc, aby otworzyć oficjalne forum. Najpierw jednak sprawdź nasze FAQ i pozostałe tematy innych użytkowników. Jeśli stworzysz nowy temat zamieść logi klienta (menu w górnym lewym rogu).
+game.crash = Supreme Commander\: Forged Alliance zawiesił się, sprawdź log {0} ,aby uzyskać więcej informacji
+close = Zamknij
