Add recommended mods

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -256,8 +256,9 @@ vault.replays.highestRated = Highest Rated
 vault.replays.displayQuery = Display search query
 vault.replays.queryPrompt = Build a query above or enter one manually
 vault.replays.searchError = An error has occurred while searching for replays.
-vault.more = More…
-modVault.newestMods = Most recent
+vault.more=More…
+modVault.recommended=M&M Team Top Picks
+modVault.newestMods=Most recent
 modVault.install = Install
 modVault.uninstall = Uninstall
 modVault.installationFailed = Mod ''{0}'' could not be installed\: {1}
