#1217 - Player rating graph - show rating on mouse over (#2228)
Co-authored-by: Ivan <v23620@gmail.com>

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1059,3 +1059,4 @@ game.replayNotAvailable = Replay file not available at this time
 game.filter.numberOfPlayers = Number of players
 game.filter.mapHeight = Map height, in km
 game.filter.mapWidth = Map width, in km
+player.info.rating = Rating:
