remove min max labels in create game dialog

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -130,28 +130,28 @@ clan.clanMembers = Members
 clan.messageLeader = Message clan leader
 clan.visitPage = Visit clan website
 chat.privateMessage.playerLeft = {0} is now offline
-chat.privateMessage.playerReconnect = {0} is back online
-chat.privateMessage.globalRating = Global rating
-chat.privateMessage.ladder1v1Rating = 1v1 rating
-chat.privateMessage.ratingFormat = {0,number,#}
-chat.privateMessage.gamesPlayed = Games played
-chat.privateMessage.currentlyPlaying = Currently playing
-chat.privateMessage.game.players = Players
-chat.privateMessage.achievements.unlocked = Achievements unlocked
-chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
-games.create = Create game
-games.create.minRating = Min.
-games.create.maxRating = Max.
-games.showPasswordProtectedGames = Show private games
-games.noGamesAvailable = There are no open games. Why don't you create one?
-games.couldNotJoin = Game could not be joined. See error message below.
-game.create.connecting = Waiting for connection
-game.create.disconnected = Please connect
-game.create.map = Map
-game.create.title = Title (required)
-game.create.password = Password (optional)
-game.create.randomMap = Select random map
-game.create.defaultGameType = Select default
+chat.privateMessage.playerReconnect={0} is back online
+chat.privateMessage.globalRating=Global rating
+chat.privateMessage.ladder1v1Rating=1v1 rating
+chat.privateMessage.ratingFormat={0,number,#}
+chat.privateMessage.gamesPlayed=Games played
+chat.privateMessage.currentlyPlaying=Currently playing
+chat.privateMessage.game.players=Players
+chat.privateMessage.achievements.unlocked=Achievements unlocked
+chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
+games.create=Create game
+games.create.minRating=Min
+games.create.maxRating=Max
+games.showPasswordProtectedGames=Show private games
+games.noGamesAvailable=There are no open games. Why don't you create one?
+games.couldNotJoin=Game could not be joined. See error message below.
+game.create.connecting=Waiting for connection
+game.create.disconnected=Please connect
+game.create.map=Map
+game.create.title=Title (required)
+game.create.password=Password (optional)
+game.create.randomMap=Select random map
+game.create.defaultGameType=Select default
 game.create.rating = Desired rating
 game.create.deselectAll = Deselect all
 game.create.reload = Reload
