highlight games with friends

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -579,6 +579,7 @@ login.serverHost = Server host
 login.replayServerHost = Replay server host
 login.apiBaseUrl = API base URL
 games.showModdedGames = Show modded games
+games.highlightGamesWithFriends = Highlight games with friends
 chat.userContext.copyUsername = Copy username
 userInfo.idleTimeFormat = Last seen\: {0}
 map.playCount = Times played
