Specify map plays

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -308,9 +308,11 @@ map.name = Name
 map.description = Description
 map.size = Size
 map.rating = Rating
-map.players = Players
-map.version = Version
-map.folderName = Folder name
+map.players=Players
+map.all=All Versions
+map.version=Version
+map.current=Current Version
+map.folderName=Folder name
 map.ranked = Ranked
 map.reviews = Reviews
 map.updated = Updated
