Update messages_cat.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cat.properties
+++ b/src/main/resources/i18n/messages_cat.properties
@@ -141,7 +141,9 @@ chat.privateMessage.game.players = Jugadors
 chat.privateMessage.achievements.unlocked = Assoliment desbloquejat
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Crea partida
+# Fuzzy
 games.create.minRating = Mín.
+# Fuzzy
 games.create.maxRating = Màx.
 games.showPasswordProtectedGames = Mostre partides privades
 games.noGamesAvailable = No hi ha partides obertes. Per què no en crees una?
