Update messages_cs.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -144,7 +144,9 @@ chat.privateMessage.game.players = Hráči
 chat.privateMessage.achievements.unlocked = Odemčeno úspěchů
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Vytvořit hru
+# Fuzzy
 games.create.minRating = Min.
+# Fuzzy
 games.create.maxRating = Max.
 games.showPasswordProtectedGames = Zobrazit hry chráněné heslem
 games.noGamesAvailable = Nejsou založeny žádné hry. Proč jednu nezaložíš?
