Update messages_nl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -147,7 +147,9 @@ chat.privateMessage.game.players = Spelers
 chat.privateMessage.achievements.unlocked = Vrijgespeelde prestaties
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Spel maken
+# Fuzzy
 games.create.minRating = Min.
+# Fuzzy
 games.create.maxRating = Max.
 games.showPasswordProtectedGames = Privé-spellen tonen
 games.noGamesAvailable = Er zijn geen beschikbaarbare spellen. Waarom maak je er niet zelf een?
@@ -866,16 +868,22 @@ settings.chat.timeFormat.description = In welk formaat de tijd wordt weergeven i
 settings.chat.chatFormat.description = Zal alleen toegepast worden op nieuwe berichten.
 settings.chat.hideFoe.description = Verberg chat berichten die verzonden zijn door spelers gemarkeerd als vijand.
 settings.chat.autoJoinChannels = Automatisch-Meedoen Kanalen.
+settings.chat.autoJoinChannels.description = Chatkanalen nemen automatisch deel naast de kanalen die door de server zijn opgegeven.
 settings.notifications.enableNotifications.description = Schakel alle algemene visuele notificaties aan of uit.
 settings.notifications.position = Notificatie Positie
 settings.sounds.enable.description = Schakel alle algemene geluiden aan of uit.
 settings.fa.autoDownloadMaps.description = Het automatisch downloaden van missende kaarten.
 settings.fa.forceRelay.description = Gebruik altijd een relay server in plaats van direct verbinden met peers. Dit leidt tot langzamere connecties, maar kan connectieproblemen oplossen.
+settings.fa.executableDecorator.description = Hoe de client het uitvoerbare spel zal uitvoeren. Laat het leeg, tenzij je weet wat je doet.
+settings.fa.executionDirectory.description = In welke map het uitvoerbare bestand van het spel moet worden uitgevoerd. Laat het leeg, tenzij je weet wat je doet.
 settings.chat.notifyOnAtMentionOnly.description = Ontvang alleen een chat notificatie als iemand jou vermeld met {0}.
+settings.general.unitDatabase.description = De door de community geïmplementeerde meerdere eenheid-databases, die door hun makers een naam hebben. Kies degene om te gebruiken in de eenheid- database.
 settings.general.disallowDiscordJoins = Niet toestaan meedoen via Discord.
 settings.general.disallowDiscordJoins.description = Laat andere speler niet toe aan je spel via Discord Rich Presense.
+settings.general.vaultFallbackLocation = Kluis Terugval Locatie
 settings.general.vaultFallbackLocation.description = Gebruik dit als het downloaden van de map/mod problemen geeft en het spel kan de mappen/mods niet vinden.
 settings.general.advancedIceLog = Schrijf ICE Log bestand
+settings.general.advancedIceLog.description = Schrijft informatie over de ICE adapter in een extra log bestand.
 mapVault.install = Installeer
 chat.userContext.report = Rapporteer speler
 userInfo.ratingHistory.allTime = Voor altijd hoog
@@ -891,25 +899,36 @@ game.reasonNotValid.desync = Te Veel Desynchronisaties
 game.reasonNotValid.wrongCondition = Verkeerde Overwinning Conditie.
 game.reasonNotValid.fogOfWar = Geen Mist van Oorlog
 game.reasonNotValid.cheats = Cheats Toestaan.
+game.reasonNotValid.prebuilt = Voorgebouwd Aan
 game.reasonNotValid.noRush = Haast Niet Ingeschakeld
+game.reasonNotValid.unitRestriction = Eenheden Restricties
+game.reasonNotValid.unrankedMap = Niet-geclassificeerde Map
 game.reasonNotValid.short = Spel te Kort
+game.reasonNotValid.unrankedMod = Niet-geclassificeerde Mop
 game.reasonNotValid.coop = Coöperatief Spel
+game.reasonNotValid.singlePlayer = Eén speler
 game.reasonNotValid.ffa = Ieder voor zich
 game.reasonNotValid.unevenTeams = Niet-gelijke Teams.
 game.reasonNotValid.unknown = Onbekend Resultaat
 game.reasonNotValid.teamsUnlocked = Teams ontgrendeld
 game.reasonNotValid.multipleTeams = Meerdere Teams
+game.reasonNotValid.ai = Had IA
 game.reasonNotValid.civiliansRevealed = Laat burgers zien
 game.reasonNotValid.difficulty = Verkeerde Moeilijkheid
 game.reasonNotValid.expansion = Uitbreiding Uitgeschakeld
+game.reasonNotValid.spawn = Beginplek Niet Vast
 game.reasonNotValid.other = Anders
+game.valid = Spel Geclassificeerd
 exitWarning.title = Waarschuwing
+exitWarning.message = Forged Alliance loopt nog steeds, weet je zeker dat je de client wilt stoppen?
+chat.userContext.broadcast = Uitzenden bericht...
 settings.data.gameDataCache.time.description = Bepaald hoe lang databestanden van het spel worden gecached. Zet naar een hoge hoeveelheid tijd als je downloads wil vermijden. Zet naar een kleine hoeveelheid tijd als je hoog schijfgebruik wil vermijden.
 settings.data.gameDataCache = Spel data cache
 settings.data.clearCache = Leeg cache
 settings.data.clearCache.description = Nog niet toegepast. Help ons deze knop maken.
 settings.data.clearCache.button = Leeg caches
 settings.general.cacheLifeTime = Bestanden gecached voor (in dagen)\:
+games.create.enforceRating = Forceer classificering
 chat.filter.countryPrompt = Land code
 game.generateMap.generationType = Generatie Type
 game.generateMap.casual = Gewoon
@@ -919,10 +938,14 @@ settings.date.system = Auto
 settings.date.mdy = Maand/Dag/Jaar
 settings.date.dmy = Dag/Maand/Jaar
 settings.chat.dateFormat = Formaat datum
+settings.chat.dateFormat.description = In welke opmaak de datum wordt laten zien in de chat.
 chat.error.noHashTag = Kanaal Naam moet starten met \# (Probeer \#{0})
+game.gameStatus.hosting = Hosting
 mod.idNumber = \#{0}
 label.copy = kopie
 settings.fa.allowReplayWhileInGame = Laat herhalingen kjken toe in het spel.
+settings.fa.patchGamePrefs = Patch Game.prefs
+settings.fa.patchGamePrefsFailed = Niet gelukt om game.prefs bestand te patchen.
 settings.fa.allowReplayWhileInGame.experimental = Experimenteel
 error.game.filesNotAccessible = Sommige bestanden van het geïnstalleerde spel kunnen niet gekopieerd worden naar FAF, tenzij je recent aangepaste spelbestanden in de geïnstalleerde versie hebt, maakt het je waarschijnlijk niet uit. We starten alsnog het spel voor je.
 game.gameRunning = Spel kan niet starten, omdat Forged Alliance al is opgestart.
@@ -930,6 +953,7 @@ chat.userColor = Kleur
 review.currentVersion = Huidige versie
 review.version = Versie {0}
 review.date = {0} op {1}
+modVault.upload.rules = Ik bevestig dat ik de regels heb gelezen voor het uploaden van mods.
 saveQuery = Bewaar zoekopdracht
 logical = Zoekopdracht+
 filter = Filter zoekopdracht
@@ -967,6 +991,8 @@ teammatchmaking.invite = Uitnodigen
 teammatchmaking.invitedPlayers = Uitgenodige spelers\:
 teammatchmaking.mapPool = Kaartlijst
 teammatchmaking.playersInQueue = In Wachtrij\: {0,number,#}
+teammatchmaking.queuePopTimer = Matching in\: {0,number,0}\:{1,number,00}
+teammatchmaking.gameCount = Spellen gespeeld\: {0,number,#}
 teammatchmaking.notification.invite.title = Uitgenodigd voor groep
 teammatchmaking.notification.invite.join = Meedoen
 teammatchmaking.match.found = Wedstrijd gevonden\!
@@ -977,6 +1003,7 @@ teammatchmaking.notification.matchFound.message = Wedstrijd gevonden en start bi
 teammatchmaking.notification.inviteAlreadyInQueue.title = Je staat al in de wachtrij
 teammatchmaking.notification.inviteAlreadyInQueue.message = Verlaat alstublieft alle wachtrijen voordat je spelers uitnodigd
 teammatchmaking.notification.joinAlreadyInQueue.title = Je bent al in een wachtrij
+teammatchmaking.notification.gameAlreadyRunning.title = Al in het spel
 teammatchmaking.partyTitle = Jou spel\:
 teammatchmaking.queue.ladder1v1 = 1v1 wachtrij
 teammatchmaking.queue.tmm2v2 = 2v2 wachtrij
@@ -991,5 +1018,31 @@ review.save.error = Deze beoordeling kan niet opgeslagen worden
 settings.general.debugLog = Schakel DEBUG logging in
 settings.general.debugLog.description = Verhoog de log level voor DEBUG om problemen op te lossen.
 settings.general.debugLog.button = Start
-# Fuzzy
 replay.inQueue = Herhaling kan niet worden gestart, omdat je in een wachtrij staat. Verlaat de wachtrij om de herhaling te bekijken
+leaderboard.tmm_2v2.name = 2v2
+leaderboard.ladder_1v1.name = 1v1
+leaderboard.global.name = Globaal
+leaderboard.gamesPlayed = {0} Spellen Gespeeld\: {1,number,#}
+userInfo.tooltipFormat.withRating = {0} ({1,number,#})
+userInfo.tooltipFormat.noRating = {0}
+getHelp = Krijg Hulp
+close = Sluit
+game.report = Rapporteer Spel
+report.id = ID
+report.createTime = Gecreeërd Op
+report.moderator = Moderator
+report.status = Status
+report.gameID = Herhaling ID
+report.gameTime = Spel Tijd Code
+report.submit = Stuur op Rapport
+report.warning.title = Waaarschuwing
+report.warning.gameIdNotNumeric = Herhaling id moet een nummer zijn
+management.maps.closeButton.label = Sluit
+management.maps.allMaps = Alle mappen
+management.maps.customMaps = Aangepaste mappen
+management.maps.officialMaps = Officiële mappen
+management.maps.uninstall.error = Kan de map niet deïnstalleren
+game.filter.numberOfPlayers = Aantal spelers
+game.filter.mapHeight = Map hoogte, in km
+game.filter.mapWidth = Map breedte, in km
+teammatchmaking.search.prompt = Naam
