Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -150,7 +150,9 @@ chat.privateMessage.game.players = Joueurs
 chat.privateMessage.achievements.unlocked = Succès déverrouillés
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Créer partie
+# Fuzzy
 games.create.minRating = Min.
+# Fuzzy
 games.create.maxRating = Max.
 games.showPasswordProtectedGames = Afficher les parties privées
 games.noGamesAvailable = Aucune partie publique. Pourquoi ne pas en créer une ?
@@ -1091,3 +1093,11 @@ game.filter.mapHeight = Hauteur, en km
 game.filter.mapWidth = Largeur, en km
 replay.couldNotParse = Impossible d'analyser la rediffusion.
 game.create.numTeams = Nombre d'équipes
+teammatchmaking.searchAndInvite = Chercher et inviter des joueurs
+teammatchmaking.search.prompt = Nom
+teammatchmaking.search.noOneInvited = Aucune invitation n'a encore été lancée
+game.create.errorUpdatingMods = Impossible de mettre à jour les mods sélectionnés. Cela peut provenir d'erreurs de droits sur les fichiers. Désélectionnez le mod lors de la création de partie pour corriger l'erreur.
+settings.data.mapAndModAutoUpdate = MAJ auto des cartes et mods
+settings.data.mapAndModAutoUpdate.description = Téléchargement automatique de la dernière version des cartes et mods lorsque vous hébergez une partie. Laissez l'option activée pour obtenir les derniers correctifs.
+player.info.rating = Niveau \:
+modVault.recommended = Favoris de l'équipe M&M
